# smart-disaster

./: .gitignore  README.md  agents.py  app.py  gif_to_frames.py  model.py  pygame_ui.py  pyproject.toml  utils.py
nn/: ppo.py
