[project]
name = "smart-disaster"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mesa (>=3.1.5,<4.0.0)",
    "networkx (>=3.4.2,<4.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "altair (>=5.5.0,<6.0.0)",
    "solara (>=1.47.0,<2.0.0)",
    "streamlit (>=1.45.0,<2.0.0)",
    "streamlit-plotly-events (>=0.0.6,<0.0.7)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
